--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@keyvhq/keyv": "^1.0.0",
     "@keyvhq/keyv-mongo": "^1.0.0",
     "colors": "^1.4.0",
+    "cron": "^1.8.2",
+    "cron-converter": "^1.0.1",
     "delay": "^5.0.0",
     "discord.js": "^13.5.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "node-cron": "^3.0.0"
   }
 }
