--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "quacky-bot",
-  "version": "1.0.0",
-  "description": "Quack quack",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=PRODUCTION node --experimental-json-modules index.js",
-    "dev": "nodemon --experimental-json-modules --no-warnings=ExperimentalWarnings index.js"
-  },
-  "keywords": [],
-  "author": "AnanthDev",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.5.0",
-    "nodemon": "^2.0.15"
-  },
-  "dependencies": {
-    "@keyvhq/keyv": "^1.0.0",
-    "@keyvhq/keyv-mongo": "^1.0.0",
-    "colors": "^1.4.0",
-    "cron": "^1.8.2",
-    "cron-converter": "^1.0.1",
-    "delay": "^5.0.0",
-    "discord.js": "^13.5.0",
-    "dotenv": "^10.0.0",
-    "node-cron": "^3.0.0"
-  }
+    "name": "quacky-bot",
+    "version": "1.0.0",
+    "description": "Quack quack",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "NODE_ENV=PRODUCTION node --experimental-json-modules index.js",
+        "dev": "nodemon --experimental-json-modules --no-warnings=ExperimentalWarnings index.js"
+    },
+    "keywords": [],
+    "author": "AnanthDev",
+    "license": "ISC",
+    "devDependencies": {
+        "eslint": "^8.5.0",
+        "nodemon": "^2.0.15"
+    },
+    "engines": {
+        "node": ">=16.6"
+    },
+    "dependencies": {
+        "@keyvhq/keyv": "^1.0.0",
+        "@keyvhq/keyv-mongo": "^1.0.0",
+        "colors": "^1.4.0",
+        "cron": "^1.8.2",
+        "cron-converter": "^1.0.1",
+        "delay": "^5.0.0",
+        "discord.js": "^13.5.0",
+        "dotenv": "^10.0.0",
+        "node-cron": "^3.0.0"
+    }
 }
