--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "nodemon": "^2.0.15"
     },
     "engines": {
-        "node": ">=16.6"
+        "node": "17.0.0"
     },
     "dependencies": {
         "@keyvhq/keyv": "^1.0.0",
